--- a/css/schedule.css
+++ b/css/schedule.css
@@ -31,3 +31,14 @@
     font-size: 20px;
     line-height: 30px;
 }
+
+/* Media Queria */
+
+@media only screen and (max-width: 1024px) {
+    .matches-schedule{
+        padding-left: 0px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 24px;
+    }
+}
