--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ ul {
 
   /* Media Queries */
 
-  @media only screen and (max-width: 1024px) {
+  @media only screen and (max-width: 1024px) and (min-width: 481px){
     .cover-page-info h1{
         font-size: 40px;
         line-height: 50px;
@@ -179,7 +179,72 @@ ul {
   }
 
   @media only screen and (max-width: 480px) {
-    body {
-      background-color: rgb(43, 211, 9);
+    .container{
+        padding: 8px 15px;
+        margin-top: 5px;
     }
+    .cover-page{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 7%;
+        text-align: center;
+    }
+    .cover-page-info{
+        width: 100%;
+        padding-top: 10px;
+    }
+    .cover-page-info h1{
+        font-size: 22px;
+        line-height: 33px;
+    }
+    .cover-page p{ 
+        white-space: nowrap; 
+        width: 250px; 
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .cover-page-img{
+        padding-left: 7%;
+        margin-top: 25px;
+    }
+    .watch-more-btn{
+        padding: 10px 18px;
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+    .middle-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .button-board{
+        background-color: rgb(240, 244, 247);
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        justify-content: space-between;
+        margin-bottom: 25px;
+    }
+    .general-btn{
+        background-color: rgb(227, 230, 233);
+        border: 1px solid rgb(235, 229, 229);
+    }
+    footer{
+        padding: 30px;
+        margin-bottom: 0;
+    }
+    ul {
+    list-style: none;
+    display: block;
+  }
+  li {
+    margin: 20px 0px;
+  }
+  .social-media{
+    font-size: 30px;
+  }
+  .social-media a{
+    margin: 0px 23px;
+  }
   }
